fix: fix main page

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -13,7 +13,8 @@
     "moreButton": "Show more",
     "news": "News",
     "whoAreWe" : "Who are we?",
-    "accordion": "Frequently asked questions"
+    "accordion": "Frequently asked questions",
+    "recipes": "Recipes"
   },
   "footer": {
     "address": "Address",
