--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -13,7 +13,8 @@
     "moreButton": "Показать еще",
     "news": "Новости",
     "whoAreWe" : "Кто мы?",
-    "accordion": "Часто задаваемые вопросы"
+    "accordion": "Часто задаваемые вопросы",
+    "recipes": "Recipes"
   },
   "footer": {
     "address": "Адрес",
