mobile version in Main Page

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -14,7 +14,7 @@
     "news": "Новости",
     "whoAreWe" : "Кто мы?",
     "accordion": "Часто задаваемые вопросы",
-    "recipes": "Recipes"
+    "recipes": "Рецепты"
   },
   "footer": {
     "address": "Адрес",
