--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -14,7 +14,8 @@
     "news": "News",
     "whoAreWe" : "Who are we?",
     "accordion": "Frequently asked questions",
-    "recipes": "Recipes"
+    "recipes": "Recipes",
+    "topProducts": "Top products"
   },
   "footer": {
     "address": "Address",
