--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -14,7 +14,8 @@
     "news": "Новости",
     "whoAreWe" : "Кто мы?",
     "accordion": "Часто задаваемые вопросы",
-    "recipes": "Рецепты"
+    "recipes": "Рецепты",
+    "topProducts": "Топовые продукты"
   },
   "footer": {
     "address": "Адрес",
