--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -43,5 +43,9 @@
     "totalPrice": "Общая стоимость",
     "som": "сом",
     "gram": "г"
+  },
+  "error":{
+    "main": "На главную",
+    "404": "Страница ненайдена"
   }
 }
